Enables install and activate of service worker

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -24,10 +24,5 @@
     Computing...
   </div>
   </body>
-  <script>
-      navigator.serviceWorker && navigator.serviceWorker.register('/javascripts/sw.js').then(function (registration) {
-        console.log('Excellent, registered with scope: ', registration.scope);
-
-      });
-  </script>
+  <script src="javascripts/main.js"></script>
 </html>
