--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,6 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" href="/app-icon.png" />
   </head>
   <body>
   <nav id="main-nav">
